// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get fairway card by id and version from the DynamoDB 1`] = `
{
  "additionalInfo": undefined,
  "anchorage": undefined,
  "attention": undefined,
  "creationTimestamp": Any<Number>,
  "creator": "test2",
  "designSpeed": undefined,
  "fairwayIds": "#1#",
  "fairways": [
    {
      "id": 1,
      "primary": true,
      "primarySequenceNumber": undefined,
      "secondary": false,
      "secondarySequenceNumber": undefined,
    },
  ],
  "generalInfo": undefined,
  "group": undefined,
  "harbors": undefined,
  "iceCondition": undefined,
  "id": "test",
  "lineText": undefined,
  "mareographs": undefined,
  "modificationTimestamp": Any<Number>,
  "modifier": "test",
  "n2000HeightSystem": false,
  "name": {
    "en": "Testen2",
    "fi": "Testfi2",
    "sv": "Testsv2",
  },
  "navigationCondition": undefined,
  "pictures": undefined,
  "pilotRoutes": [
    {
      "id": 2,
      "name": "Reitti 2",
    },
  ],
  "seaLevel": undefined,
  "speedLimit": undefined,
  "status": "DRAFT",
  "temporaryNotifications": [],
  "trafficService": {
    "pilot": {
      "email": undefined,
      "extraInfo": undefined,
      "fax": undefined,
      "internet": undefined,
      "phoneNumber": undefined,
      "places": [
        {
          "geometry": {
            "coordinates": [
              28.17,
              61.5228333,
            ],
            "type": "Point",
          },
          "id": 3458100305,
          "name": {
            "en": "Puumala2",
            "fi": "Puumala2",
            "sv": "Puumala2",
          },
          "pilotJourney": undefined,
        },
      ],
    },
    "tugs": null,
    "vts": null,
  },
  "version": "v2",
  "vesselRecommendation": undefined,
  "visibility": undefined,
  "windRecommendation": undefined,
}
`;

exports[`should get v1 by id from the DynamoDB 1`] = `
{
  "additionalInfo": undefined,
  "anchorage": undefined,
  "attention": undefined,
  "creationTimestamp": Any<Number>,
  "creator": "test",
  "designSpeed": undefined,
  "fairwayIds": "#1#",
  "fairways": [
    {
      "id": 1,
      "primary": true,
      "primarySequenceNumber": 1,
      "secondary": false,
      "secondarySequenceNumber": 1,
    },
  ],
  "generalInfo": undefined,
  "group": undefined,
  "harbors": undefined,
  "iceCondition": undefined,
  "id": "test",
  "lineText": undefined,
  "mareographs": undefined,
  "modificationTimestamp": Any<Number>,
  "modifier": "test2",
  "n2000HeightSystem": false,
  "name": {
    "en": "Testen",
    "fi": "Testfi",
    "sv": "Testsv",
  },
  "navigationCondition": undefined,
  "pictures": undefined,
  "pilotRoutes": [
    {
      "id": 1,
      "name": "Reitti 1",
    },
  ],
  "seaLevel": undefined,
  "speedLimit": undefined,
  "status": "PUBLIC",
  "temporaryNotifications": [],
  "trafficService": {
    "pilot": {
      "email": undefined,
      "extraInfo": undefined,
      "fax": undefined,
      "internet": undefined,
      "phoneNumber": undefined,
      "places": [
        {
          "geometry": {
            "coordinates": [],
            "type": "Point",
          },
          "id": 681017200,
          "name": {
            "en": "",
            "fi": "",
            "sv": "",
          },
          "pilotJourney": undefined,
        },
      ],
    },
    "tugs": null,
    "vts": null,
  },
  "version": "v1",
  "vesselRecommendation": undefined,
  "visibility": undefined,
  "windRecommendation": undefined,
}
`;
